@@ -49,7 +49,8 @@ type openWeatherMapAPIGeoCodingStruct struct {
 }
 
 /* 
-//3.0 API
+//3.0 API, requires your credit card even to get 1k free requests per day
+
 type openWeatherMapAPIResponseStruct struct {
     Lat      			float64 `json:"lat"`
 	Lon					float64 `json:"lon"`
@@ -275,7 +276,7 @@ func getWeather(location string, botUnits string) (string, string, string, strin
 				condition = "Snow"
 			} else if (conditionCode<800) {
 			    // Athmosphere
-				condition = openWeatherMapAPIResponse.Weather[0].Main
+				condition = "Windy"
 			} else if (conditionCode==800) {
 			    // Clear
 				condition = "Sunny"
